--- a/personal-account-2.html
+++ b/personal-account-2.html
@@ -84,10 +84,10 @@
 								<a href="personal-account-3.html">Мои заказы</a>
 							</div>
 							<div class="swiper-slide">
-								<a href="#">Мои отзывы</a>
+								<a href="personal-account-4.html">Мои отзывы</a>
 							</div>
 							<div class="swiper-slide">
-								<a href="#">Мои записи</a>
+								<a href="personal-account-5.html">Мои записи</a>
 							</div>
 						</div>
 					</nav>
@@ -108,10 +108,10 @@
 									<a href="personal-account-3.html">Мои заказы</a>
 								</li>
 								<li>
-									<a href="#">Мои отзывы</a>
+									<a href="personal-account-4.html">Мои отзывы</a>
 								</li>
 								<li>
-									<a href="#">Мои записи</a>
+									<a href="personal-account-5.html">Мои записи</a>
 								</li>
 							</ul>
 						</nav>
