--- a/personal-account-3.html
+++ b/personal-account-3.html
@@ -84,10 +84,10 @@
 								<a href="personal-account-3.html" class="active">Мои заказы</a>
 							</div>
 							<div class="swiper-slide">
-								<a href="#">Мои отзывы</a>
+								<a href="personal-account-4.html">Мои отзывы</a>
 							</div>
 							<div class="swiper-slide">
-								<a href="#">Мои записи</a>
+								<a href="personal-account-5.html">Мои записи</a>
 							</div>
 						</div>
 					</nav>
@@ -108,61 +108,55 @@
 									<a href="personal-account-3.html" class="active">Мои заказы</a>
 								</li>
 								<li>
-									<a href="#">Мои отзывы</a>
+									<a href="personal-account-4.html">Мои отзывы</a>
 								</li>
 								<li>
-									<a href="#">Мои записи</a>
+									<a href="personal-account-5.html">Мои записи</a>
 								</li>
 							</ul>
 						</nav>
 					</div>
 					<div class="col-md-9">
 						<div class="order-preview mb-4">
-							<div class="row row-cols-2">
-								<div>
-									<div class="font-2 f_12 fw_5 mb-2">
-										<a href="personal-account-3-order.html">Заказ от 15 июля 2021</a>
-									</div>
-									<div class="font-2 f_12 fw_3 light-gray">
-										<a href="personal-account-3-order.html">№ 648943</a>
-									</div>
+							<div>
+								<div class="font-2 f_12 fw_5 mb-2">
+									<a href="personal-account-3-order.html">Заказ от 15 июля 2021</a>
 								</div>
-								<div class="text-end">
-									<div class="font-2 f_12 fw_5 black mb-2">1 632 ₽</div>
-									<button type="button" class="accent f_09 fw_5 bb_1 ms-auto">Повторить заказ</button>
+								<div class="font-2 f_12 fw_3 light-gray">
+									<a href="personal-account-3-order.html">№ 648943</a>
 								</div>
+							</div>
+							<div class="text-end">
+								<div class="font-2 f_12 fw_5 black mb-2">1 632 ₽</div>
+								<button type="button" class="accent f_09 fw_5 bb_1 ms-auto">Повторить заказ</button>
 							</div>
 						</div>
 						<div class="order-preview mb-4">
-							<div class="row row-cols-2">
-								<div>
-									<div class="font-2 f_12 fw_5 mb-2">
-										<a href="personal-account-3-order.html">Заказ от 15 июля 2021</a>
-									</div>
-									<div class="font-2 f_12 fw_3 light-gray">
-										<a href="personal-account-3-order.html">№ 648943</a>
-									</div>
+							<div>
+								<div class="font-2 f_12 fw_5 mb-2">
+									<a href="personal-account-3-order.html">Заказ от 15 июля 2021</a>
 								</div>
-								<div class="text-end">
-									<div class="font-2 f_12 fw_5 black mb-2">1 632 ₽</div>
-									<button type="button" class="accent f_09 fw_5 bb_1 ms-auto">Повторить заказ</button>
+								<div class="font-2 f_12 fw_3 light-gray">
+									<a href="personal-account-3-order.html">№ 648943</a>
 								</div>
+							</div>
+							<div class="text-end">
+								<div class="font-2 f_12 fw_5 black mb-2">1 632 ₽</div>
+								<button type="button" class="accent f_09 fw_5 bb_1 ms-auto">Повторить заказ</button>
 							</div>
 						</div>
 						<div class="order-preview mb-4">
-							<div class="row row-cols-2">
-								<div>
-									<div class="font-2 f_12 fw_5 mb-2">
-										<a href="personal-account-3-order.html">Заказ от 15 июля 2021</a>
-									</div>
-									<div class="font-2 f_12 fw_3 light-gray">
-										<a href="personal-account-3-order.html">№ 648943</a>
-									</div>
+							<div>
+								<div class="font-2 f_12 fw_5 mb-2">
+									<a href="personal-account-3-order.html">Заказ от 15 июля 2021</a>
 								</div>
-								<div class="text-end">
-									<div class="font-2 f_12 fw_5 black mb-2">1 632 ₽</div>
-									<button type="button" class="accent f_09 fw_5 bb_1 ms-auto">Повторить заказ</button>
+								<div class="font-2 f_12 fw_3 light-gray">
+									<a href="personal-account-3-order.html">№ 648943</a>
 								</div>
+							</div>
+							<div class="text-end">
+								<div class="font-2 f_12 fw_5 black mb-2">1 632 ₽</div>
+								<button type="button" class="accent f_09 fw_5 bb_1 ms-auto">Повторить заказ</button>
 							</div>
 						</div>
 					</div>
