--- a/personal-account-1.html
+++ b/personal-account-1.html
@@ -94,7 +94,7 @@
 			</div>
 			<div class="container">
 				<div class="row">
-					<div class="d-none d-md-block col-3">
+					<div class="d-none d-md-block col-md-3 col-xl-2">
 						<nav>
 							<ul>
 								<li>
@@ -115,22 +115,22 @@
 							</ul>
 						</nav>
 					</div>
-					<div class="col-md-9">
+					<div class="col-md-9 col-xl-10">
 						<form action="" class="profile">
 							<div class="row align-items-center font-2 gx-2 gx-md-4 gy-3 gy-md-4 gy-lg-5">
-								<div class="col-4 col-xl-3">
+								<div class="offset-xl-1 col-4 col-xl-3">
 									<div class="f_14 light-gray">Имя:</div>
 								</div>
 								<div class="col-8 col-xl-7">
 									<input class="w-100 f_14" type="text" placeholder="Анастасия">
 								</div>
-								<div class="col-4 col-xl-3">
+								<div class="offset-xl-1 col-4 col-xl-3">
 									<div class="f_14 light-gray">Фамилия:</div>
 								</div>
 								<div class="col-8 col-xl-7">
 									<input class="w-100 f_14" type="text" placeholder="Смирнова">
 								</div>
-								<div class="col-4 col-xl-3">
+								<div class="offset-xl-1 col-4 col-xl-3">
 									<div class="f_14 light-gray">Пол:</div>
 								</div>
 								<div class="col-8 col-xl-7 d-flex align-items-center f_12">
@@ -139,7 +139,7 @@
 									<input type="radio" name="gender" value="male" id="male" class="me-1 me-md-2">
 									<label for="male">Мужской</label>
 								</div>
-								<div class="col-4 col-xl-3">
+								<div class="offset-xl-1 col-4 col-xl-3">
 									<div class="f_14 light-gray">Дата рождения:</div>
 								</div>
 								<div class="col-8 col-xl-7 d-flex align-items-center f_14">
@@ -188,24 +188,24 @@
 										<option value="2005">2005</option>
 									</select>
 								</div>
-								<div class="col-4 col-xl-3">
+								<div class="offset-xl-1 col-4 col-xl-3">
 									<div class="f_14 light-gray">Телефон:</div>
 								</div>
 								<div class="col-8 col-xl-7">
 									<input class="w-100 f_14" type="text" placeholder="+7 (962) 123 56 89">
 								</div>
-								<div class="col-4 col-xl-3">
+								<div class="offset-xl-1 col-4 col-xl-3">
 									<div class="f_14 light-gray">Email:</div>
 								</div>
 								<div class="col-8 col-xl-7">
 									<input class="w-100 f_14" type="text" placeholder="Email@mail.com">
 								</div>
-								<div class="col-md-8 col-xl-7 offset-md-4 offset-xl-3 d-flex align-items-center f_12">
+								<div class="col-lg-8 col-xl-7 offset-lg-4 d-flex align-items-center f_12">
 									<input type="checkbox" name="gender" value="female" id="female" class="me-2">
 									<label for="female" class="flex-1 me-5">Получать уведомления о наших акциях</label>
 								</div>
-								<div class="col-md-8 col-xl-7 offset-md-4 offset-xl-3">
-									<button type="submit" class="btn_main btn_1 mx-auto mx-md-0">
+								<div class="col-lg-8 col-xl-7 offset-lg-4">
+									<button type="submit" class="btn_main btn_1 mx-auto mx-lg-0">
 										<span class="f_09">Редактировать</span>
 									</button>
 								</div>
