--- a/personal-account-2.html
+++ b/personal-account-2.html
@@ -95,7 +95,7 @@
 			</div>
 			<div class="container">
 				<div class="row">
-					<div class="d-none d-md-block col-3">
+					<div class="d-none d-md-block col-md-3 col-xl-2">
 						<nav>
 							<ul>
 								<li>
@@ -116,7 +116,7 @@
 							</ul>
 						</nav>
 					</div>
-					<div class="col-md-9">
+					<div class="col-md-9 col-xl-10">
 						<div class="row g-3 g-sm-4 row-cols-2 row-cols-lg-3 row-cols-xxl-4">
 							<div>
 								<div class="product">
