--- a/personal-account-3-order.html
+++ b/personal-account-3-order.html
@@ -95,7 +95,7 @@
 			</div>
 			<div class="container">
 				<div class="row">
-					<div class="d-none d-md-block col-3">
+					<div class="d-none d-md-block col-md-3 col-xl-2">
 						<nav>
 							<ul>
 								<li>
@@ -116,7 +116,7 @@
 							</ul>
 						</nav>
 					</div>
-					<div class="col-md-9">
+					<div class="col-md-9 col-xl-10">
 						<div class="order-full">
 							<div class="d-block d-md-none f_08 mb-3"><a href="personal-account-3.html">< Назад  к списку заказов</a></div>
 							<div class="text-center d-sm-flex justify-content-between align-items-center mb-4 mb-lg-5">
