--- a/personal-account-4.html
+++ b/personal-account-4.html
@@ -95,7 +95,7 @@
 			</div>
 			<div class="container">
 				<div class="row">
-					<div class="d-none d-md-block col-3">
+					<div class="d-none d-md-block col-md-3 col-xl-2">
 						<nav>
 							<ul>
 								<li>
@@ -116,9 +116,189 @@
 							</ul>
 						</nav>
 					</div>
-					<div class="col-md-9">
-						<div class="pa-review">
-							
+					<div class="col-md-9 col-xl-10">
+						<div class="pa-review mb-4">
+							<div class="row align-items-center gx-5">
+								<div class="col-3">
+									<img src="img/team/natalia.jpg" class="pa-review-img">
+								</div>
+								<div class="col-9">
+									<div class="d-flex justify-content-between align-items-center">
+										<div class="font-2">
+											<div class="f_15 fw_5 mb-1">Наталья Ворон</div>
+											<div class="accent">Топ - стилист, колорист, универсал, технолог краски HIPERTIN, эстетический - трихолог.</div>
+										</div>
+										<div class="rating ms-5">
+											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
+											</svg>
+											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
+											</svg>
+											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
+											</svg>
+											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
+											</svg>
+											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
+											</svg>
+										</div>
+									</div>
+									<div class="row row-cols-2 mt-4 font-2">
+										<div class="d-flex align-items-center">
+											<img src="img/icons/content_cut-gray.svg" alt="Услуга">
+											<div class="ms-4">Услуга: <span class="light-gray">Сложное окрашивание</span></div>
+										</div>
+										<div class="d-flex align-items-center">
+											<img src="img/icons/calendar_today-gray.svg" alt="Дата посещения">
+											<div class="ms-4">Дата посещения: <span class="light-gray">09.09.2021</span></div>
+										</div>
+									</div>
+									<div class="font-2 light-gray mt-4">
+										<p>Опыт работы более 10-и лет, постоянное повышение квалификации. Обучение Казахстан, Новосибирск, Москва, Итальянская школа ALDO COPPOLA</p>
+										<p>Выполнение любых сложных работ как в стрижках, так и в окрашиваниях, выход из черного цвета в светлый тон без ломкости волос.</p>
+									</div>
+									<div class="d-flex justify-content-between align-items-center mt-4">
+										<div class="font-2 light-gray">
+											<span>Опубликованно</span><span class="ms-4">09.09.21</span>
+										</div>
+										<div class="d-flex align-items-center">
+											<button type="button" class="lightest-gray fw_5 f_09">
+												<img src="img/icons/edit.svg" alt="">
+												<span class="bb_1">Редактировать</span>
+											</button>
+											<button type="button" class="lightest-gray fw_5 f_09 ms-5">
+												<img src="img/icons/delete.svg" alt="">
+												<span class="bb_1">Удалить</span>
+											</button>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="pa-review mb-4">
+							<div class="row align-items-center gx-5">
+								<div class="col-3">
+									<img src="img/team/natalia.jpg" class="pa-review-img">
+								</div>
+								<div class="col-9">
+									<div class="d-flex justify-content-between align-items-center">
+										<div class="font-2">
+											<div class="f_15 fw_5 mb-1">Наталья Ворон</div>
+											<div class="accent">Топ - стилист, колорист, универсал, технолог краски HIPERTIN, эстетический - трихолог.</div>
+										</div>
+										<div class="rating ms-5">
+											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
+											</svg>
+											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
+											</svg>
+											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
+											</svg>
+											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
+											</svg>
+											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
+											</svg>
+										</div>
+									</div>
+									<div class="row row-cols-2 mt-4 font-2">
+										<div class="d-flex align-items-center">
+											<img src="img/icons/content_cut-gray.svg" alt="Услуга">
+											<div class="ms-4">Услуга: <span class="light-gray">Сложное окрашивание</span></div>
+										</div>
+										<div class="d-flex align-items-center">
+											<img src="img/icons/calendar_today-gray.svg" alt="Дата посещения">
+											<div class="ms-4">Дата посещения: <span class="light-gray">09.09.2021</span></div>
+										</div>
+									</div>
+									<div class="font-2 light-gray mt-4">
+										<p>Опыт работы более 10-и лет, постоянное повышение квалификации. Обучение Казахстан, Новосибирск, Москва, Итальянская школа ALDO COPPOLA</p>
+										<p>Выполнение любых сложных работ как в стрижках, так и в окрашиваниях, выход из черного цвета в светлый тон без ломкости волос.</p>
+									</div>
+									<div class="d-flex justify-content-between align-items-center mt-4">
+										<div class="font-2 light-gray">
+											<span>Опубликованно</span><span class="ms-4">09.09.21</span>
+										</div>
+										<div class="d-flex align-items-center">
+											<button type="button" class="lightest-gray fw_5 f_09">
+												<img src="img/icons/edit.svg" alt="">
+												<span class="bb_1">Редактировать</span>
+											</button>
+											<button type="button" class="lightest-gray fw_5 f_09 ms-5">
+												<img src="img/icons/delete.svg" alt="">
+												<span class="bb_1">Удалить</span>
+											</button>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="pa-review mb-4">
+							<div class="row align-items-center gx-5">
+								<div class="col-3">
+									<img src="img/team/natalia.jpg" class="pa-review-img">
+								</div>
+								<div class="col-9">
+									<div class="d-flex justify-content-between align-items-center">
+										<div class="font-2">
+											<div class="f_15 fw_5 mb-1">Наталья Ворон</div>
+											<div class="accent">Топ - стилист, колорист, универсал, технолог краски HIPERTIN, эстетический - трихолог.</div>
+										</div>
+										<div class="rating ms-5">
+											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
+											</svg>
+											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
+											</svg>
+											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
+											</svg>
+											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
+											</svg>
+											<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+												<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
+											</svg>
+										</div>
+									</div>
+									<div class="row row-cols-2 mt-4 font-2">
+										<div class="d-flex align-items-center">
+											<img src="img/icons/content_cut-gray.svg" alt="Услуга">
+											<div class="ms-4">Услуга: <span class="light-gray">Сложное окрашивание</span></div>
+										</div>
+										<div class="d-flex align-items-center">
+											<img src="img/icons/calendar_today-gray.svg" alt="Дата посещения">
+											<div class="ms-4">Дата посещения: <span class="light-gray">09.09.2021</span></div>
+										</div>
+									</div>
+									<div class="font-2 light-gray mt-4">
+										<p>Опыт работы более 10-и лет, постоянное повышение квалификации. Обучение Казахстан, Новосибирск, Москва, Итальянская школа ALDO COPPOLA</p>
+										<p>Выполнение любых сложных работ как в стрижках, так и в окрашиваниях, выход из черного цвета в светлый тон без ломкости волос.</p>
+									</div>
+									<div class="d-flex justify-content-between align-items-center mt-4">
+										<div class="font-2 light-gray">
+											<span>Опубликованно</span><span class="ms-4">09.09.21</span>
+										</div>
+										<div class="d-flex align-items-center">
+											<button type="button" class="lightest-gray fw_5 f_09" data-bs-toggle="modal" data-bs-target="#review-edit">
+												<img src="img/icons/edit.svg" alt="">
+												<span class="bb_1">Редактировать</span>
+											</button>
+											<button type="button" class="lightest-gray fw_5 f_09 ms-5" data-bs-toggle="modal" data-bs-target="#review-delete">
+												<img src="img/icons/delete.svg" alt="">
+												<span class="bb_1">Удалить</span>
+											</button>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -270,6 +450,87 @@
 						<li><a href="contacts.html">Контакты</a></li>
 					</ul>
 				</nav>
+			</div>
+		</div>
+	</div>
+
+	<!-- review edit -->
+	<div class="modal fade" id="review-edit" tabindex="-1" aria-hidden="true">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content p-sm-5">
+				<h4>Оставьте отзыв о работе мастера</h4>
+				<form action="">
+					<div class="row gy-4">
+						<div class="col-4">Оценка работы:</div>
+						<div class="col-8">
+							<div id="rating">
+								<input id="star-5" type="radio" name="reviewStars" value="5">
+								<label title="отлично" for="star-5"></label>
+
+								<input id="star-4" type="radio" name="reviewStars" value="4">
+								<label title="хорошо" for="star-4"></label>
+
+								<input id="star-3" type="radio" name="reviewStars" value="3" checked>
+								<label title="нормально" for="star-3"></label>
+
+								<input id="star-2" type="radio" name="reviewStars" value="2">
+								<label title="неудовлетворительно" for="star-2"></label>
+
+								<input id="star-1" type="radio" name="reviewStars" value="1">
+								<label title="плохо" for="star-1"></label>
+							</div>
+						</div>
+						<div class="col-4">Дата посещения:</div>
+						<div class="col-8">
+							<input type="date" value="2018-07-22" class="white w-100">
+						</div>
+						<div class="col-4">Услуга:</div>
+						<div class="col-8">
+							<select class="white inp-style w-100">
+								<option value="none" disabled>Выберите услугу</option>
+								<option value="Услуга 1" class="dark-gray">Услуга 1</option>
+								<option value="Услуга 2" selected class="dark-gray">Услуга 2</option>
+								<option value="Услуга 3" class="dark-gray">Услуга 3</option>
+							</select>
+						</div>
+						<div class="col-12">
+							<textarea rows="4" placeholder="Ваш комментарий" class="white w-100">Наталья лучший мастер по окрашиванию из всех у кого я была. Исправила плачевную ситуацию после неудачного мелирования в другом салоне, когда я была уже в отчаянии. Сделала все идеально, как я и хотела,  а также подобрала подходящий уход. Вежливый, отзывчивый мастер, прислушывающийся к мнению и желанию клиента. Для меня это самое важное. Теперь на  окрашивание буду ходить только к ней.</textarea>
+						</div>
+					</div>
+					<button type="submit" class="btn_main btn_1 mx-auto mt-4" data-bs-target="#confirmation" data-bs-toggle="modal" data-bs-dismiss="modal">
+						<span class="f_09 text-capitalize">Редактировать отзыв</span>
+					</button>
+					<div class="text-center f_09 mt-4">Нажимая “Обубликовать отзыв”, вы соглашаетесь <a href="#" class="accent">правилами публикации</a>.</div>
+				</form>
+				<button type="button" class="btn-close" data-bs-dismiss="modal">
+					<svg viewBox="0 0 26 26" xmlns="http://www.w3.org/2000/svg">
+						<path d="M23.0001 2.99995L13.345 12.9999L23.0001 22.9999"/>
+						<path d="M2.99997 22.9999L13.3447 13L2.99997 3"/>
+					</svg>
+				</button>
+			</div>
+		</div>
+	</div>
+
+	<!-- review delete -->
+	<div class="modal fade" id="review-delete" tabindex="-1" aria-hidden="true">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content p-4 p-sm-5">
+				<div class="font-2 f_12 text-center mb-5">Вы действительно хотите удалить отзыв?</div>
+				<div class="d-flex">
+					<button type="submit" class="btn_main btn_2">
+						<span class="f_09 text-capitalize">Отмена</span>
+					</button>
+					<button type="submit" class="btn_main btn_1 ms-4">
+						<span class="f_09 text-capitalize">Удалить</span>
+					</button>
+				</div>
+				<button type="button" class="btn-close" data-bs-dismiss="modal">
+					<svg viewBox="0 0 26 26" xmlns="http://www.w3.org/2000/svg">
+						<path d="M23.0001 2.99995L13.345 12.9999L23.0001 22.9999"/>
+						<path d="M2.99997 22.9999L13.3447 13L2.99997 3"/>
+					</svg>
+				</button>
 			</div>
 		</div>
 	</div>
