--- a/personal-account-3.html
+++ b/personal-account-3.html
@@ -95,7 +95,7 @@
 			</div>
 			<div class="container">
 				<div class="row">
-					<div class="d-none d-md-block col-3">
+					<div class="d-none d-md-block col-md-3 col-xl-2">
 						<nav>
 							<ul>
 								<li>
@@ -116,7 +116,7 @@
 							</ul>
 						</nav>
 					</div>
-					<div class="col-md-9">
+					<div class="col-md-9 col-xl-10">
 						<div class="order-preview mb-4">
 							<div>
 								<div class="font-2 f_12 fw_5 mb-2">
